v0.881/README_zh-CN.md
# YASP - Yet Another Sound Player (技术文档)

## 摘要

YASP (Yet Another Sound Player) 是一款专为 SPFM (Sound-Processing FM-synthesis) 系列硬件设计的、功能强大的命令行音乐播放器。它专注于高效、精确地播放经典的 VGM 和 S98 格式音乐文件。本文档旨在深入剖析其核心技术实现，包括高级计时系统、SPFM 通信协议、以及创新的芯片转换与缓存机制。

---

## 目录
* [1. 源码参考与致谢](#1)
* [2. 项目背景与架构](#2)
* [3. 核心功能与特色](#3)
* [4. 关键技术剖析](#4)
  * [4.1. VGM 文件处理流程](#4-1)
  * [4.2. 智能芯片转换](#4-2)
    * [4.2.1. 转换路径概览](#4-2-1)
    * [4.2.2. OPN 到 OPM 的详细转换规则](#4-2-2)
  * [4.3. 高级计时与刷新系统](#4-3)
    * [4.3.1. 刷新模式 (Flush Mode)](#4-3-1)
    * [4.3.2. 定时器模式 (Timer Mode)](#4-3-2)
    * [4.3.3. 定时器核心源码详解](#4-3-3)
  * [4.4. SPFM 通信协议](#4-4)
* [5. 性能优化-版本对比](#5)
  * [5.1. 问题根源：为什么旧版本更快？](#5-1)
  * [5.2. 修复措施：如何恢复并超越旧版性能](#5-2)
* [6. 操作指南](#6)
* [7. 编译与构建](#7)
* [8. 故障排查与更新日志](#8)
  * [8.1. 故障排查：播放时不受控制地快速切换曲目](#8-1)
    * [8.1.1. 诊断过程](#8-1-1)
    * [8.1.2. 最终解决方案](#8-1-2)
  * [8.2. Bug 修复与改进日志 (v0.881)](#8-2)
    * [8.2.1. 修复了转换后 VGM 文件的循环逻辑](#8-2-1)
    * [8.2.2. 修复了播放完成后的自动切歌问题](#8-2-2)
    * [8.2.3. 修正了 UI 中总时间的计算](#8-2-3)
    * [8.2.4. 修正了 UI 中 VGM 芯片信息的显示](#8-2-4)
    * [8.2.5. 增加了对无效 VGM 文件的检测](#8-2-5)

---

## 1. 源码参考与致谢
<a id="1"></a>
YASP 的开发深度参考了以下优秀项目，在此对这些项目的作者表示由衷的敬意和感谢。他们的工作为 YASP 的实现提供了坚实的基础和关键的灵感。

*   **`yasp (Yet Another SPFM Light Player)`**
    *   **作者**: uobikiemukot
    *   **贡献**: **本项目的起点和最初的灵感来源。** YASP 的名称继承自此项目，其早期的代码结构为本项目的开发提供了宝贵的初始框架和方向。

*   **`node-spfm`**
    *   **作者**: Mitsutaka Okazaki (digital-sound-antiques), Denjhang
    *   **贡献**: 提供了本项目的核心逻辑和算法基础，特别是在 SPFM 通信协议 (`spfm.c`)、芯片控制以及 OPN 到 OPM 的转换算法 (`opn_to_opm.c`) 方面。

*   **`VGMPlay`**
    *   **作者**: Valley Bell
    *   **贡献**: 本项目的高级计时系统 (`util.c` 中的 `yasp_usleep`) 完全基于 VGMPlay 的核心计时模型，从根本上解决了播放稳定性的问题。模式 6 (VGMPlay Mode) 和模式 7 (Optimized VGMPlay Mode) 直接来源于其思想。

*   **`vgmplay-msx`**
    *   **作者**: Laurens Holst (grauw)
    *   **贡献**: 为 OPN 到 OPM 的 LFO 频率转换提供了精确的查找表，源自其项目中的 `vgmplay-msx/src/drivers/emulations/OPNFMOnSFG.asm` 文件。没有这个参考，就不可能实现听感上正确的 LFO 效果。

*   **`vgm-conv`**
    *   **作者**: Mitsutaka Okazaki (digital-sound-antiques)
    *   **贡献**: 芯片频率转换的精确数学模型来源于此项目。

*   **`vgm-parser-js`**
    *   **作者**: Mitsutaka Okazaki (digital-sound-antiques)
    *   **贡献**: 在解决 GD3 标签缓存问题时，本项目借鉴了其 `vgm-parser-main` 模块中健壮的“完整文件载入内存”处理策略 (`vgm.c`)，为最终的成功实现提供了关键思路。

## 2. 项目背景与架构
<a id="2"></a>
YASP 旨在为 SPFM 硬件爱好者提供一个功能强大且高度可定制的命令行音乐播放器。项目由 **Denjhang** (项目所有者/主要开发者) 和 **Cline** (AI 软件工程师) 合作完成，前者负责需求、架构和关键技术验证，后者负责具体实现、集成和文档撰写。

**核心架构:**
*   `main.c`: 主程序入口，负责初始化、配置加载、主播放循环和键盘输入处理。
*   `play.c`: 播放器 UI 渲染和状态管理的核心。
*   `vgm.c` / `s98.c`: 分别负责 VGM 和 S98 文件的解析、命令处理和播放逻辑。
*   `opn_to_opm.c`, `ay_to_opm.c`, `sn_to_ay.c`: 实现芯片指令转换的模块。
*   `util.c`: 包含高精度定时器、`yasp_usleep` 实现和 `ini` 文件读写等辅助工具。
*   `spfm.c`: 封装了与 SPFM 硬件通过 FTDI D2XX 驱动进行通信的底层逻辑。

## 3. 核心功能与特色
<a id="3"></a>
*   **广泛的芯片支持:** YASP 支持多种经典的音源芯片，无论是直接播放还是通过自动转换，覆盖了大量怀旧游戏音乐的需求。支持的芯片列表如下：
    *   YM2608, YM2151, YM2612, YM2203, YM2413, YM3526, YM3812, Y8950, AY8910, SN76489, YMF262, SEGAPCM, RF5C68, YM2610
*   **多格式播放:** 支持 `.vgm`, `.vgz`, 和 `.s98` 音乐文件。
*   **GD3 标签保真:** 采用先进的内存处理技术，确保在转换和缓存过程中，VGM 文件内的 GD3 音乐标签被完整保留。
*   **高级计时系统:** 提供多种基于高精度性能计数器的计时策略，确保在各种系统负载下都能实现精确、无抖动的音频播放。
*   **内置文件浏览器:** 方便用户在文件系统中导航和选择音乐。

## 4. 关键技术剖析
<a id="4"></a>
### 4.1. VGM 文件处理流程
<a id="4-1"></a>
为了解决在文件转换和缓存过程中遇到的数据一致性问题（特别是 GD3 标签的丢失），YASP 采用了一种健壮的、基于内存的处理流程。该机制的核心是：在需要创建缓存时，**先将整个原始 VGM 文件一次性完整读入内存**，然后关闭文件句柄。后续的转换、GD3 标签提取和新缓存文件的写入，都基于这个内存副本进行操作。这种“先完整载入，再隔离处理”的策略，确保了数据源的唯一性和不可变性，是保证播放流畅、转换无误和 GD3 标签不丢失的基石。

以下是 `vgm.c` 中 `vgm_play` 函数实现此流程的关键代码：

**1. 将整个原始 VGM 文件读入内存**
```c
// 1. Read entire original file into memory
fseek(input_fp, 0, SEEK_END);
long original_file_size = ftell(input_fp);
fseek(input_fp, 0, SEEK_SET);
uint8_t* original_file_data = malloc(original_file_size);
if (!original_file_data || fread(original_file_data, 1, original_file_size, input_fp) != original_file_size) {
    logging(LOG_ERROR, "Failed to read original VGM file into memory.");
    if (original_file_data) free(original_file_data);
    return;
}
fclose(input_fp); // Close original file, we have it in memory now
```
**解说**: 这是“先完整载入”策略的直接体现。代码获取文件大小，分配等大的内存，然后一次性将整个文件读入 `original_file_data` 缓冲区。完成后，立即关闭原始文件句柄，后续所有操作都与磁盘上的原始文件无关，从根本上避免了文件指针混乱的问题。

**2. 从内存中提取 GD3 标签并写入缓存**
```c
// 4. Write GD3 block from memory to cache
long gd3_start_in_cache = 0;
uint32_t gd3_offset_in_header = read_le32(original_file_data + 0x14);
if (gd3_offset_in_header > 0) {
    uint32_t gd3_abs_offset = 0x14 + gd3_offset_in_header;
    uint32_t gd3_length = read_le32(original_file_data + gd3_abs_offset + 8);
    uint32_t total_gd3_size = 12 + gd3_length;
    
    gd3_start_in_cache = ftell(g_cache_fp);
    fwrite(original_file_data + gd3_abs_offset, 1, total_gd3_size, g_cache_fp);
}
```
**解说**: 这是“隔离处理”策略的关键一步。代码直接从内存缓冲区 `original_file_data` 中读取 GD3 标签的偏移和长度，然后将完整的 GD3 数据块（包括头部和内容）原封不动地写入新的缓存文件。这确保了 GD3 信息的无损迁移。

**3. 从内存中进行数据转换**
```c
// In vgm_play:
const uint8_t* vgm_data_ptr = original_file_data + g_vgm_header.vgm_data_offset;
size_t vgm_data_size = (g_vgm_header.eof_offset + 4) - g_vgm_header.vgm_data_offset;
vgm_convert_and_cache_opn_to_opm_from_mem(vgm_data_ptr, vgm_data_size, &g_vgm_header);

// The conversion function itself:
static bool vgm_convert_and_cache_opn_to_opm_from_mem(const uint8_t* vgm_data, size_t vgm_data_size, const vgm_header_t* original_header) {
    // ... loop through vgm_data (memory buffer) and convert ...
}
```
**解说**: 转换函数 `vgm_convert_and_cache_opn_to_opm_from_mem` 的输入不再是文件指针，而是指向内存中 VGM 数据部分的指针 `vgm_data`。这彻底避免了在文件流上进行读写操作可能引发的数据不一致问题，保证了转换过程的纯粹和可靠。

### 4.2. 智能芯片转换
<a id="4-2"></a>
当检测到用户硬件上缺少 VGM 文件所需的芯片，但存在可替代的目标芯片时，YASP 会自动执行转换。

#### 4.2.1. 转换路径概览
<a id="4-2-1"></a>
| 源芯片 (Source) | 目标芯片 (Target) | 转换模块 | 备注 |
| :--- | :--- | :--- | :--- |
| **YM2612/2203/2608 (OPN)** | YM2151 (OPM) | `opn_to_opm.c` | 核心 FM 音源转换，支持频率、包络等参数映射。 |
| **AY8910 (PSG)** | YM2151 (OPM) | `ay_to_opm.c` | 使用 OPM 的 FM 合成来模拟 PSG 的方波和噪声。 |
| **SN76489 (DCSG)** | AY8910 (PSG) | `sn_to_ay.c` | 中间步骤，将 SN76489 指令转为 AY8910 指令。 |
| **SN76489 (DCSG)** | YM2151 (OPM) | `sn_to_ay.c` -> `ay_to_opm.c` | **转换链**：SN76489 -> AY8910 -> YM2151。 |

#### 4.2.2. OPN 到 OPM 的详细转换规则
<a id="4-2-2"></a>
为了在没有 OPN 芯片的情况下播放 OPN 音乐，YASP 实现了一个实时的寄存器级转换器。它将 OPN 的寄存器写入转换为功能上等效的 OPM 寄存器写入。

##### 4.2.2.1. 寄存器映射总览
| OPN (YM2612/2203) | OPM (YM2151) | 简要说明 |
| :--- | :--- | :--- |
| `0x22` (LFRQ) | `0x18` (LFRQ) | LFO 频率转换 |
| `0x28` (Key On/Off) | `0x08` (Key On/Off) | 通道与操作员的开关 |
| `0x30..0x8F` (Operator) | `0x40..0xBF` (Operator) | 操作员参数（DT, MUL, TL, KS, AR, DR, SR, RR, SL, SSG-EG） |
| `0xA0..0xA6` (F-Num/Block) | `0x28..0x37` (KC/KF) | 频率（音高）转换 |
| `0xB0..0xB2` (FB/CONNECT) | `0x20..0x27` (RL/FB/CONNECT) | 反馈与算法 |
| `B4..B6` (L/R/AMS/PMS) | `0x38..0x3F` (PMS/AMS) | 声道、LFO 灵敏度 |

##### 4.2.2.2. 详细转换规则
###### 1. LFO 频率 (LFRQ)
*   **OPN `0x22` -> OPM `0x18`**
*   OPN 的 LFO 频率只有 8 级，而 OPM 更加精细。转换器使用一个查找表（LUT）来映射 OPN 的值到 OPM 上一个最接近的等效值。这个 LUT 基于 `OPNFMOnSFG.asm` 的实现，以确保听感上的一致性。

    **查找表 (C 语言数组):**
    ```c
    const uint8_t lfo_lut[] = {0, 0, 0, 0, 0, 0, 0, 0, 0xC1, 0xC7, 0xC9, 0xCB, 0xCD, 0xD4, 0xF9, 0xFF};
    ```

    **用法示例:**
    当 OPN 的 `0x22` 寄存器接收到一个值时，程序会取其低 4 位 (`data & 0x0F`) 作为索引，在 `lfo_lut` 数组中查找对应的 OPM 值，并将其写入 OPM 的 `0x18` 寄存器。

    | OPN `0x22` 输入值 (data) | 索引 (data & 0x0F) | OPM `0x18` 输出值 (lfo_lut[index]) |
    | :---: | :---: | :---: |
    | `0x00` - `0x07` | 0 - 7 | `0x00` (LFO 关闭) |
    | `0x08` | 8 | `0xC1` |
    | `0x09` | 9 | `0xC7` |
    | `0x0A` | 10 | `0xC9` |
    | `0x0B` | 11 | `0xCB` |
    | `0x0C` | 12 | `0xCD` |
    | `0x0D` | 13 | `0xD4` |
    | `0x0E` | 14 | `0xF9` |
    | `0x0F` | 15 | `0xFF` |

###### 2. Key On/Off
*   **OPN `0x28` -> OPM `0x08`**
*   这个寄存器控制哪个通道的哪些操作员（Slot）发声或停止。OPN 的通道选择在低 3 位，而 OPM 在低 3 位。OPN 的操作员选择在高 4 位，而 OPM 在高 3 位。转换时需要进行相应的位移和屏蔽。
*   **关键代码**: `_write_func(0x08, (slots << 3) | ch);`

###### 3. 操作员参数 (DT, MUL, TL, etc.)
*   **OPN `0x30..0x8F` -> OPM `0x40..0xBF`**
*   这些寄存器控制了 FM 合成的核心参数，如Detune, Multiple, Total Level, Attack Rate等。幸运的是，OPN 和 OPM 在这些参数的位定义上大部分是兼容的。转换主要是地址的重新计算。
*   OPN 的地址格式为 `Base + Channel + SlotOffset`，而 OPM 是 `Base + Channel + SlotOffset`。转换函数需要根据输入的 OPN 地址计算出对应的 OPM 地址。
*   **关键代码**: `uint8_t base = 0x40 + ((addr & 0xf0) - 0x30) * 2; uint8_t offset = slot * 8 + ch; _write_func(base + offset, data);`

###### 4. 频率 (F-Number/Block 到 Key Code/Fraction)
*   **OPN `0xA0..0xA6` -> OPM `0x28..0x37`**
*   这是最复杂的转换。OPN 使用 `F-Number` 和 `Block`（八度）来定义频率，而 OPM 使用 `Key Code` (音符) 和 `Key Fraction` (精细调谐)。
*   转换过程如下：
    1.  根据 OPN 的 F-Num 和 Block 计算出实际的频率值 (Hz)。
    2.  `freq = (source_clock * fnum) / (divisor * (1 << (20 - blk)))`
    3.  将计算出的频率 (Hz) 再转换为 OPM 的音符和音分。
    4.  `key = 60 + log2((freq * clock_ratio) / BASE_FREQ_OPM) * 12.0`
    5.  最后将 `key` 分解为 OPM 的 `KC` (八度+音符) 和 `KF` (音分) 并写入相应寄存器。
*   **关键代码**: `opn_freq_to_opm_key(fnum, blk, &kc, &kf); _write_func(0x28 + ch, kc); _write_func(0x30 + ch, kf << 2);`

###### 5. 反馈/算法 (FB/CONNECT)
*   **OPN `0xB0..0xB2` -> OPM `0x20..0x27`**
*   OPN 和 OPM 在此处的位定义相似，但 OPM 的寄存器还包含了声道信息（RL）。因此，在写入时，需要先从缓存中读取该通道的声道设置，然后与反馈/算法值合并后再写入。
*   **关键代码**: `_write_func(0x20 + ch, (get_rl_flags(ch) << 6) | (data & 0x3f));`

###### 6. 声道/LFO 灵敏度 (L/R/AMS/PMS)
*   **OPN `0xB4..0xB6` -> OPM `0x38..0x3F`**
*   OPN 将声道（L/R）和 LFO 灵敏度（AMS/PMS）打包在同一个寄存器中，而 OPM 将它们分开。
*   转换时：
    1.  从 OPN 寄存器中提取出声道信息并缓存起来（供其他寄存器转换时使用）。
    2.  提取 PMS（音高调制灵敏度）和 AMS（幅度调制灵敏度）。
    3.  特别地，为了让用户可以实时控制 LFO 效果的强度，代码中会对 PMS 值应用一个全局的幅度乘数 `g_opn_lfo_amplitude`。经过反复测试，当此缩放参数设置为 **0.9** 时，转换后的音效最接近原始 OPN 的听感。
    4.  将处理后的 PMS 和 AMS 写入 OPM 的 `0x38-0x3F` 寄存器。
*   **关键代码**: `uint8_t scaled_pms = (uint8_t)(pms * g_opn_lfo_amplitude); _write_func(0x38 + ch, (scaled_pms << 4) | ams);`

### 4.3. 高级计时与刷新系统
<a id="4-3"></a>
YASP 的播放精度和稳定性由“刷新模式”和“定时器模式”共同决定。

#### 4.3.1. 刷新模式 (Flush Mode)
<a id="4-3-1"></a>
刷新模式决定了播放器将寄存器数据发送到 SPFM 硬件的**粒度**。

| 模式 (按键) | 名称 | 原理 |
| :---: | :--- | :--- |
| **1** | 寄存器级 (Register-Level) | **每一次**寄存器写入后，立刻调用 `spfm_flush()`。这保证了最高的实时性，但 USB 通信开销巨大。 |
| **2** | **命令级 (Command-Level)** | 仅在处理完一个完整的 VGM 命令后（如 `0x61 nn nn` 这样的等待命令，或一个芯片写入命令），才调用 `spfm_flush()`。这是**性能和实时性的最佳平衡**，也是默认设置。 |

#### 4.3.2. 定时器模式 (Timer Mode)
<a id="4-3-2"></a>
定时器模式决定了播放器在处理完 VGM 命令后，如何精确地**等待**到下一个事件发生。所有模式都基于高精度性能计数器 (`QueryPerformanceCounter`) 进行误差补偿。

| 模式 (按键) | 源码名称 | 原理 |
| :---: | :--- | :--- |
| **3** | High-Precision Sleep | 调用 `Sleep(1)` 等待，并用性能计数器补偿其巨大的不精确性。适用于低负载环境。 |
| **4** | Hybrid Sleep | 使用 `CreateWaitableTimer` 等待 1ms，并补偿误差。比 `Sleep(1)` 更精确。 |
| **5** | Multimedia Timer | 使用 `timeSetEvent` 设置一个 1ms 的高精度多媒体定时器。播放线程等待该定时器触发的事件。精度高，但高负载下事件可能延迟。 |
| **6** | **VGMPlay Mode** | “忙等”的变体，不断调用 `Sleep(0)` 让出时间片，响应极快，但 CPU 占用率极高。 |
| **7** | **Optimized VGMPlay Mode** | 模式 5 的优化版，增加了“防失控”机制，防止声音滞后和崩溃。**这是默认和最佳选择。** |

#### 4.3.3. 定时器核心源码详解
<a id="4-3-3"></a>
以下是 `util.c` 中 `yasp_usleep` 函数针对不同模式的核心实现：

**模式 3: High-Precision Sleep**
```c
case 0: // High-Precision Sleep
    tick_to_wait = get_tick() + us_to_tick(us);
    while (get_tick() < tick_to_wait) {
        Sleep(1);
    }
    break;
```
**解说**: 这是最简单的实现。循环调用 `Sleep(1)`，每次让出至少 1ms 的时间片，直到性能计数器达到目标时间。`Sleep` 的精度很差，但 CPU 占用率低。

**模式 4: Hybrid Sleep**
```c
case 1: // Hybrid Sleep
    tick_to_wait = get_tick() + us_to_tick(us);
    while (get_tick() < tick_to_wait) {
        WaitForSingleObject(g_waitable_timer, 1);
    }
    break;
```
**解说**: 使用 Windows 的可等待定时器 `WaitForSingleObject` 等待 1ms。它比 `Sleep(1)` 更精确，是精度和 CPU 占用的一个折中。

**模式 5: Multimedia Timer**
```c
case 2: // Multimedia Timer
    tick_to_wait = get_tick() + us_to_tick(us);
    while (get_tick() < tick_to_wait) {
        WaitForSingleObject(g_timer_event, 1);
    }
    break;
```
**解说**: 依赖于一个由 `timeSetEvent` 创建的、在后台每 1ms 触发一次的 `g_timer_event` 事件。线程等待这个事件，精度很高。

**模式 6: VGMPlay Mode**
```c
case 3: // VGMPlay Mode
    tick_to_wait = get_tick() + us_to_tick(us);
    while (get_tick() < tick_to_wait) {
        Sleep(0);
    }
    break;
```
**解说**: 这是“忙等”的一种形式。`Sleep(0)` 会让当前线程立即放弃剩余的时间片，让其他线程运行。这使得循环检测时间的频率非常高，响应极快，但会持续占用 CPU。

**模式 7: Optimized VGMPlay Mode**
此模式的优化不在 `yasp_usleep` 中，而在 `play.c` 的 `vgm_play` 函数里。它使用与模式 5 相同的等待机制，但增加了“防失控”逻辑：
```c
// 在 play.c 的 vgm_play 中
if (g_timer_mode == 7) {
    vgm_slice_to_do = min(vgm_slice_to_do, g_vgm_slice_limiter);
}
```
**解说**: 如果因为系统繁忙导致定时器事件严重延迟，积压了大量需要播放的样本 (`vgm_slice_to_do`)，此代码会将其限制在一个最大值 (`g_vgm_slice_limiter`) 内。这可以防止声音出现长时间的滞后，并快速追上实时进度，代价是丢弃少量积压的样本。

### 4.4. SPFM 通信协议
<a id="4-4"></a>
YASP 通过 FTDI D2XX 驱动与 SPFM 硬件通信。其核心是**写入缓冲机制**和**混合等待策略**。对于极短的等待（<10个样本），发送硬件等待命令 `0x80`；对于较长的等待，则调用由上述定时器模式决定的高精度软件等待函数 `yasp_usleep`。

## 5. 性能优化-版本对比
<a id="5"></a>
在开发过程中，我们发现当前版本（修复前）相比于旧的 `console_player862` 版本，在文件浏览器的操作流畅度和音乐播放的顺滑度上存在明显退步。本章节旨在深入分析其根本原因，并详细阐述为解决这些问题而实施的优化措施。

### 5.1. 问题根源：为什么旧版本更快？
<a id="5-1"></a>
经过对 `console_player862` 源码的分析，我们定位了导致性能下降的两个核心原因：

**1. 同步的文件系统读取阻塞了主线程**

*   **旧版本 (`862`) 行为**: 文件浏览器在独立的线程中异步加载目录内容。这意味着即使用户进入一个包含数千个文件的庞大目录，主线程（负责UI渲染和键盘输入）也**不会被阻塞**，界面始终保持响应。
*   **新版本（修复前）行为**: 文件浏览器在主线程中**同步地**调用 `scandir`。当 `scandir` 遍历一个大目录时，它会花费数百毫秒甚至数秒的时间，在此期间，整个程序完全冻结，无法响应任何用户输入，也无法刷新UI，导致了严重的卡顿感。

**2. 低效的UI刷新机制**

*   **旧版本 (`862`) 行为**: UI的刷新是**事件驱动**的。只有在播放状态改变（如切换歌曲、暂停）或用户有输入时，才会触发 `update_ui()` 函数，重绘界面。这种方式极为高效。
*   **新版本（修复前）行为**: UI的刷新被置于一个**固定的、高频率的循环**中。无论状态是否改变，主循环都会以极高的频率（每隔几毫秒）调用 `update_ui()`，导致了大量的冗余计算和屏幕重绘。这不仅浪费了CPU资源，还可能与播放线程的计时器发生冲突，影响播放的稳定性。

### 5.2. 修复措施：如何恢复并超越旧版性能
<a id="5-2"></a>
针对上述问题，我们实施了以下关键优化：

**1. 引入异步文件列表加载 (`browser.c`)**

我们重构了文件浏览器，恢复并改进了异步加载机制。

```c
// 在 browser.c 中
static bool g_loading_thread_active = false;
static HANDLE g_loading_thread_handle = NULL;

// 当用户进入一个目录时，不再直接扫描，而是创建一个新线程
void refresh_file_list(const char* path) {
    // ...
    g_loading_thread_handle = CreateThread(NULL, 0, loading_thread_func, new_path, 0, NULL);
    // ...
}

// 新的加载线程负责执行耗时的 scandir 操作
static DWORD WINAPI loading_thread_func(LPVOID lpParam) {
    g_loading_thread_active = true;
    // ...
    int n = scandir(path, &g_namelist, 0, alphasort); // 耗时操作在这里执行
    // ...
    g_loading_thread_active = false;
    return 0;
}
```
**解说**: 当用户选择一个目录时，主函数 `refresh_file_list` 不再自己执行 `scandir`，而是立即返回，并将这个耗时操作交给一个新创建的 `loading_thread_func` 线程去完成。在加载期间，`g_loading_thread_active` 标志位被设为 `true`，UI可以据此显示“正在加载...”的提示，而主线程本身保持流畅，可以随时响应用户操作。

**2. 实现事件驱动的UI刷新 (`main.c`, `play.c`)**

我们彻底移除了主循环中无效的、高频率的UI重绘调用，并引入了一个全局标志 `g_ui_refresh_request`。

```c
// 在 main.c 的主循环中
int main() {
    // ...
    while (!g_quit_flag) {
        if (g_ui_refresh_request) {
            update_ui(...);
            g_ui_refresh_request = false; // 重绘后立即清除标志
        }
        // ... 处理键盘输入 ...
        yasp_usleep(16000); // 主循环现在可以轻松地休眠
    }
    // ...
}
```
**解说**: `update_ui()` 现在只有在 `g_ui_refresh_request` 为 `true` 时才会被调用。这个标志仅在真正需要更新UI的时刻被设置，例如：
*   歌曲开始播放时 (`play_file`)
*   用户暂停/继续、切换模式时 (`main.c` 的键盘处理部分)
*   文件浏览器完成加载时 (`browser.c`)

这种**事件驱动**的模式，将UI刷新的频率从每秒数百次降低到了必要的几次，极大地降低了CPU占用，并从根本上解决了UI刷新与播放计时器之间的潜在冲突。

通过以上两项核心优化，YASP不仅恢复了旧版本 `862` 的流畅体验，还在代码结构和可维护性上取得了进一步的提升。

## 6. 操作指南
<a id="6"></a>
YASP 的操作完全通过键盘进行。界面分为**播放器主界面**和**文件浏览器**。

### 6.1. 播放器主界面
播放器主界面实时显示当前播放的音乐信息、播放器状态和硬件配置。

#### 6.1.1. 界面布局 (ASCII 简图)
```
+------------------------------------------------------------------------------+
| YASP - Yet Another Sound Player                               (行 0)         |
| --------------------------------------------------            (行 1)         |
| Track: [当前曲目名称]                                         (行 2)         |
| Game: [所属游戏名称]                                          (行 3)         |
| System: [游戏平台]                                            (行 4)         |
| Author: [作曲家]                                              (行 5)         |
| Date: [发行日期]                                              (行 6)         |
| VGM By: [VGM 文件制作者]                                      (行 7)         |
| VGM Chip: [芯片类型] ([时钟频率]MHz)                          (行 8)         |
| Status: [Playing.../Paused]                                   (行 9)         |
| Total Time: [总时长] | Loops: [循环次数]                      (行 10)        |
| Flush Mode (1,2): [刷新模式]                                  (行 11)        |
| Timer (3-7): [定时器模式]                                     (行 12)        |
| Mode: [播放模式] | Speed: [播放速度]x                         (行 13)        |
| OPN LFO Amp: [LFO 幅度]                                       (行 14)        |
| Slot 0: [芯片0] | Slot 1: [芯片1]                             (行 15)        |
| Conversion: [转换状态]                                        (行 16)        |
| --------------------------------------------------            (行 17)        |
| [按键说明]                                                    (行 18)        |
+------------------------------------------------------------------------------+
```

#### 6.1.2. 界面说明
*   **行 2-7**: 显示从 VGM 文件的 GD3 标签中读取的元数据。如果标签不存在，则显示文件名。
*   **行 8 (VGM Chip)**: 显示 VGM 文件原始指定的音源芯片及其时钟频率。
*   **行 9 (Status)**: 显示当前是正在播放还是已暂停。
*   **行 10 (Total Time / Loops)**: 显示计算出的总播放时长（包含循环）和用户设定的循环次数。
*   **行 11 (Flush Mode)**: 数据发送到 SPFM 的刷新策略（详见 [4.3.1](#4-3-1)）。
*   **行 12 (Timer)**: 播放器使用的等待策略（详见 [4.3.2](#4-3-2)）。
*   **行 13 (Mode / Speed)**: 显示当前是顺序播放还是随机播放，以及播放速度倍率。
*   **行 14 (OPN LFO Amp)**: 仅在进行 OPN->OPM 转换时显示，用于调整 LFO 效果的强度。
*   **行 15 (Slot 0 / Slot 1)**: 显示 SPFM 硬件上两个插槽实际安装的芯片类型。
*   **行 16 (Conversion)**: 显示当前的播放方式（直接播放、实时转换或使用缓存）。

### 6.2. 文件浏览器
在主界面按 `f` 键可进入文件浏览器。

```
+------------------------------------------------------------------------------+
| Path: [当前路径]                                                             |
| --------------------------------------------------                           |
| > [.]                                                                        |
|   [..]                                                                       |
|   [目录1]/                                                                   |
|   [文件1.vgm]                                                                |
|   [文件2.s98]                                                                |
|   ...                                                                        |
+------------------------------------------------------------------------------+
```
*   使用 `上/下` 方向键选择文件或目录。
*   按 `回车` 键播放选中的文件或进入选中的目录。
*   按 `f` 键可随时关闭浏览器，返回播放器主界面。

### 6.3. 按键说明
| 按键 | 功能 | 备注 |
| :--: | :-- | :-- |
| `q` | **退出程序** | |
| `p` | **暂停 / 继续** | 切换播放状态。 |
| `n` | **下一首** | 立即切换到播放列表的下一首歌曲。 |
| `b` | **上一首** | 立即切换到播放列表的上一首歌曲。 |
| `r` | **切换播放模式** | 在“顺序播放”和“随机播放”之间切换。 |
| `f` | **打开/关闭文件浏览器** | |
| `+` / `-` | **调整播放速度** | 以 0.05 为步进增加或减少速度倍率。 |
| `上/下` | **调整 OPN LFO 幅度** | 仅在 OPN->OPM 转换时有效，用于实时增强或减弱 LFO 效果。 |
| `左/右` | **调整循环次数** | 减少或增加歌曲的循环播放次数。 |
| `1` / `2` | **切换刷新模式** | 在“寄存器级”和“命令级”刷新之间切换。 |
| `3` - `7` | **切换定时器模式** | 切换不同的计时策略，以适应不同的系统负载。 |

## 7. 编译与构建
<a id="7"></a>
YASP 项目使用 `make` 进行构建，依赖于 `MinGW-w64` 编译环境和 FTDI 官方的 `D2XX` 驱动库。

### 7.1. 环境要求
*   **编译器**: `MinGW-w64` (推荐使用 `x86_64-w64-mingw32` 版本，以支持 64 位编译)。
*   **构建工具**: `make` (通常与 MinGW-w64 一同安装)。
*   **依赖库**:
    *   `ftd2xx.h`: FTDI D2XX 驱动头文件，需放置在 `console_player` 目录下。
    *   `ftd2xx64.dll`: 64 位 FTDI D2XX 动态链接库，需放置在 `console_player` 目录下。

### 7.2. Makefile 详解
项目根目录下的 `console_player/makefile` 文件定义了所有构建规则。

*   **`CC`**: 定义 C 编译器，默认为 `gcc`。
*   **`CFLAGS`**: 编译标志。
    *   `-m64`: 生成 64 位代码。
    *   `-Wall`, `-Wextra`: 开启所有标准和额外的警告，以提高代码质量。
    *   `-g`: 生成调试信息，方便使用 GDB 等工具进行调试。
    *   `-O0`: 关闭所有优化，确保调试时代码行为与源码完全一致。
    *   `-I"../ftdi_driver"`: 将 `ftdi_driver` 目录添加到头文件搜索路径，以便找到 `ftd2xx.h`。
*   **`LDFLAGS`**: 链接器标志，在链接阶段传递给编译器。
    *   `-m64`: 创建一个 64 位的可执行文件。
    *   `-s`: 从最终的可执行文件中剥离符号表和重定位信息，以减小文件大小。
    *   `-L"../ftdi_driver/amd64"`: 将 `ftdi_driver/amd64` 目录添加到库搜索路径，以便链接器找到 `libftd2xx.a`。
*   **`LIBS`**: 需要链接的库文件。
    *   `-lftd2xx`: 链接 FTDI D2XX 驱动库，用于与 SPFM 硬件通信。
    *   `-lm`: 链接数学库 (`libm`)，提供 `log2` 等数学函数，用于频率转换。
    *   `-lwinmm`: (仅 Windows) 链接 Windows 多媒体库 (`winmm.lib`)，提供 `timeSetEvent` 等高精度定时器功能。
    *   `-lavrt`: (仅 Windows) 链接多媒体类计划程序服务库 (`avrt.lib`)，允许将播放线程的优先级提升到“Pro Audio”级别，以减少音频抖动。
    *   `-lole32`: (仅 Windows) 链接 OLE32 库，提供 COM 服务，是 `avrt` 库的依赖项。
    *   `-lpthread`: (仅 POSIX 系统如 Linux) 链接 POSIX 线程库，用于创建和管理线程。
*   **`SOURCES`**: 定义了所有需要编译的 `.c` 源文件。
*   **`OBJECTS`**: 根据 `SOURCES` 自动生成对应的 `.o` 目标文件列表。
*   **`TARGET`**: 定义了最终生成的可执行文件名，默认为 `yasp_test.exe`。

### 7.3. 构建与运行
1.  **执行构建**: 打开终端，在**项目根目录** (`yasp`) 下运行 `make` 命令，并使用 `-C` 参数指定 `makefile` 所在的目录。
    ```bash
    make -C console_player
    ```
    `make` 会自动根据 `console_player/makefile` 的规则，编译所有源文件，并最终在 `console_player` 目录下生成 `yasp_test.exe`。

2.  **运行程序**:
    ```bash
    ./console_player/yasp_test.exe
    ```

3.  **清理构建文件**: 如果需要重新编译所有文件，可以运行 `make clean`。
    ```bash
    make -C console_player clean
    ```
    此命令会删除 `console_player` 目录中所有生成的 `.o` 目标文件和 `yasp_test.exe` 可执行文件。

---

## 8. 故障排查与更新日志
<a id="8"></a>
### 8.1. 故障排查：播放时不受控制地快速切换曲目
<a id="8-1"></a>
在开发芯片转换和缓存功能时，我们遇到了一个非常棘手的 bug：当播放需要实时转换的 VGM 文件（如 OPN -> OPM）时，程序会立即结束当前曲目，并“自动跳转”到播放列表的下一首，导致无法正常听完任何一首需要转换的音乐。

#### 8.1.1. 诊断过程
<a id="8-1-1"></a>
经过与项目所有者 **Denjhang** 的多次、细致的联调，我们排除了多种可能性，最终将问题定位在缓存文件的创建流程上。

1.  **初步怀疑：文件指针混乱**
    *   最初，我们怀疑在创建缓存文件时，读写操作混用了同一个文件指针 `FILE*`，导致文件流状态错乱。
    *   **修复尝试**：引入了“先将整个 VGM 文件读入内存，再从内存进行转换和写入”的策略。这虽然从架构上解决了指针混用的隐患，并成功保留了 GD3 标签，但“自动跳转”的问题依然存在。

2.  **深入分析：`fopen` 的静默失败**
    *   在代码逻辑中，程序会尝试以写入模式 (`"wb"`) 打开一个新的缓存文件。然而，我们忽略了一个 C 语言标准库的关键行为：如果 `fopen` 尝试在一个**不存在的目录**中创建文件，它会**直接失败并返回 `NULL`**，而不会自动创建目录。
    *   **关键线索**：项目所有者 **Denjhang** 敏锐地观察到：“**我发现没有生成任何缓冲文件**”。这个线索是整个问题得以解决的决定性转折点。它直接证明了 `fopen(cache_filename, "wb")` 这个调用已经失败。

3.  **最终根源定位**
    *   当 `fopen` 失败后，后续的代码逻辑没有进行充分的 `NULL` 检查，导致程序继续使用一个无效的、为 `NULL` 的文件句柄进行后续的播放操作。
    *   当播放线程 (`vgm_player_thread`) 尝试从这个 `NULL` 文件句柄中读取数据时，`fread` 或其他文件操作函数会立即返回错误（通常是 0 或 -1），这使得播放循环的退出条件 `g_is_playing = false` 被瞬间触发。
    *   主播放循环检测到 `g_is_playing` 变为 `false`，便认为当前歌曲已“播放完毕”，于是自然地切换到下一首。这就完美解释了“不受控制地快速切换曲目”的现象。

#### 8.1.2. 最终解决方案
<a id="8-1-2"></a>
解决方案非常直接：在调用 `fopen` 创建缓存文件之前，**强制确保 `cache` 目录一定存在**。

我们在 `vgm.c` 的 `vgm_play` 函数中，加入了平台相关的目录创建代码：

```c
// 在 vgm.c 的 vgm_play 函数中，尝试创建缓存文件之前
// --- CACHE DOES NOT EXIST, CREATE IT ---
logging(INFO, "Cache not found. Converting %s to OPM...", chip_type_to_string(g_vgm_chip_type));

#ifdef _WIN32
    _mkdir("console_player/cache");
#else
    mkdir("console_player/cache", 0755);
#endif

// 之后再安全地调用 fopen
g_cache_fp = fopen(cache_filename, "wb");
if (!g_cache_fp) {
    // ... 错误处理 ...
}
```
**解说**: 这段代码利用 `_mkdir` (Windows) 或 `mkdir` (Linux/macOS) 来尝试创建 `console_player/cache` 目录。如果目录已经存在，这个调用会被安全地忽略；如果不存在，它会被创建。这确保了后续的 `fopen` 调用总能在一个有效的路径下执行，从而从根本上解决了文件创建失败的问题。

这个案例深刻地揭示了在进行底层文件 I/O 操作时，对**前置条件（如目录存在性）进行校验**的重要性。

### 8.2. Bug 修复与改进日志 (v0.881)
<a id="8-2"></a>
本次更新修复了多个关键问题，并对核心功能进行了改进：

#### 8.2.1. 修复了转换后 VGM 文件的循环逻辑
<a id="8-2-1"></a>
*   **问题**: 转换后的缓存 VGM 文件（例如，从 YM2612 转换到 YM2151）没有正确继承原始文件的循环点，而是强制从文件头开始循环。
*   **修复过程**:
    1.  在 `vgm.c` 中引入了 `g_original_loop_offset` 和 `g_converted_loop_offset` 两个全局变量，用于在转换过程中追踪循环点的位置。
    2.  修改了 `vgm_convert_and_cache_from_mem` 函数。在遍历原始 VGM 数据流时，检查当前的文件指针是否到达了原始头部记录的循环点 (`g_original_loop_offset`)。
    3.  当到达该点时，记录下当前**缓存文件**的写入位置 (`ftell(g_cache_fp)`) 到 `g_converted_loop_offset`。
    4.  最后，在 `vgm_play` 函数中，当回写缓存文件的头部信息时，使用这个新计算出的 `g_converted_loop_offset` 作为新的循环起始点，从而确保了循环的准确性。

#### 8.2.2. 修复了播放完成后的自动切歌问题
<a id="8-2-2"></a>
*   **问题**: 在某些情况下（尤其是在播放期间按过“下一首”或“上一首”之后），一首歌曲在完成所有循环后不会自动切换到播放列表的下一首。
*   **修复过程**:
    1.  问题定位在 `main.c` 的 `player_thread_func` 线程函数中。
    2.  原逻辑在 `play_file` 函数返回后，会检查 `g_next_track_flag` 等标志位。如果这些标志位被置位，它会错误地将 `g_is_playing` 设为 `false` 并中断播放循环。
    3.  修改了该逻辑判断。现在，如果歌曲是自然播放结束（即没有被用户手动切歌中断），它会正常地获取下一首歌的索引并继续播放。如果歌曲是被用户中断的，则由主循环的其他部分来处理切歌逻辑，避免了线程的提前退出。

#### 8.2.3. 修正了 UI 中总时间的计算
<a id="8-2-3"></a>
*   **问题**: UI 显示的“Total Time”没有将循环次数计算在内，导致显示的时间与实际播放时间不符。
*   **修复过程**: 在 `play.c` 的 `update_ui` 函数中，修改了总时间的计算公式。新的计算方式为：`总样本数 + (循环部分样本数 * (循环次数 - 1))`。这样，显示的总时间就能准确反映包括所有循环在内的完整播放时长。

#### 8.2.4. 修正了 UI 中 VGM 芯片信息的显示
<a id="8-2-4"></a>
*   **问题**: 当播放一个经过转换的缓存文件时，UI 的“VGM Chip”字段显示的是目标芯片（如 YM2151），而不是原始 VGM 文件中记录的芯片（如 YM2612）。
*   **修复过程**:
    1.  在 `vgm.c` 中，当解析头部时，除了 `g_vgm_chip_type` 外，还使用 `g_original_vgm_chip_type` 来专门存储原始文件的芯片类型。
    2.  在 `play.c` 的 `update_ui` 函数中，修改了显示逻辑。现在它会检查 `g_is_playing_from_cache` 标志。如果正在播放缓存文件，则强制使用 `g_original_vgm_chip_type` 和原始头部信息来显示芯片名称和时钟频率。

#### 8.2.5. 增加了对无效 VGM 文件的检测
<a id="8-2-5"></a>
*   **问题**: 对于头部信息不完整或损坏的 VGM 文件（例如所有芯片时钟都为 0），播放器仍然会尝试猜测一个时钟频率并播放，这可能导致不正确的行为。
*   **修复过程**: 在 `play.c` 的 `update_ui` 函数中，增加了一个检查。在显示芯片信息前，它会判断 VGM 头部中所有已知芯片的时钟是否都为 0。如果是，则直接显示 "VGM Chip: Invalid/Unsupported"，向用户明确指出文件可能存在问题。
